@@ -18,8 +18,8 @@
 
 package io.crate.plugin;
 
-import io.crate.action.sql.SQLOperations;
 import io.crate.beans.QueryStats;
+import io.crate.operation.collect.stats.JobsLogs;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.logging.Loggers;
@@ -34,9 +34,9 @@ public class CrateMonitor {
     private final MBeanServer mbeanServer = ManagementFactory.getPlatformMBeanServer();
 
     @Inject
-    public CrateMonitor(SQLOperations sqlOperations, Settings settings) {
+    public CrateMonitor(JobsLogs jobsLogs, Settings settings) {
         logger = Loggers.getLogger(CrateMonitor.class, settings);
-        registerMBean(QueryStats.NAME, new QueryStats(sqlOperations, settings));
+        registerMBean(QueryStats.NAME, new QueryStats(jobsLogs));
     }
 
     private void registerMBean(String name, Object bean) {
